fixing of HW3 21.02.2022 22:42